@@ -7,7 +7,7 @@
 PORTNAME=		fidogate
 PORTVERSION=		5.1.0
 CATEGORIES=		news mail
-MASTER_SITES=		http://node126.narod.ru/files/
+MASTER_SITES=		${MASTER_SITE_SOURCEFORGE}
 DISTNAME=		fidogate5.1.0ds
 
 MAINTAINER=		rusfidogate@users.sourceforge.net
@@ -41,11 +41,20 @@ CONFIGURE_ARGS+=	--disable-desc-dir
 .if !defined(WITHOUT_ALIASES)
 CONFIGURE_ARGS+=	--enable-aliases-local
 .endif
-.if !defined(WITHOUT_DBC)
+.if defined(WITH_DBC)
 CONFIGURE_ARGS+=	--enable-dbc-history
 .endif
 .if defined(DNT_NETMAIL)
 CONFIGURE_ARGS+=	--enable-dnt-netmail
+.endif
+.if defined(WITHOUT_FMSGID)
+CONFIGURE_ARGS+=        --disable-fs-msgid
+.endif
+.if !defined(WITH_AVAIL)
+CONFIGURE_ARGS+=        --disable-af-avail
+.endif
+.if defined(WITHOUT_BEST_AKA)
+CONFIGURE_ARGS+=        --disable-best-aka
 .endif
 CONFIGURE_ARGS+=	--libexec=${PREFIX}/libexec/fidogate \
 			--sysconfdir=${PREFIX}/etc/fido/gate \
