@@ -1,5 +1,6 @@
 2004-01-31  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
+	* packages/freebsd: update freebsd port
 	* src/common/msgid.c: change log() to fglog()
 
 2004-01-30  Andrey Slusar <rusfidogate@users.sourceforge.net>
